# rusty_sub_finder

./: Cargo.toml  README.md
src/: main.rs
